--- a/TestVibrate/Base.lproj/Main.storyboard
+++ b/TestVibrate/Base.lproj/Main.storyboard
@@ -18,70 +18,87 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jle-9f-U9z">
-                                <rect key="frame" x="87" y="149" width="61" height="59"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.58431372549019611" green="0.6470588235294118" blue="0.70196078431372544" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
-                                <gestureRecognizers/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="j0b-dQ-eU4" appends="YES" id="Bnq-Hm-TYc"/>
-                                </connections>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dao-oq-bNX">
-                                <rect key="frame" x="87" y="355" width="61" height="59"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="0.6645419132" blue="0.15507099690000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <gestureRecognizers/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="mNY-ll-ehf" appends="YES" id="Poy-ea-14f"/>
-                                </connections>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Dh-Ff-HWf">
-                                <rect key="frame" x="269" y="355" width="61" height="59"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0011229392833558634" green="0.89813512559999997" blue="0.021299447325734997" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
-                            </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pjk-0j-hzw">
-                                <rect key="frame" x="195" y="436" width="25" height="25"/>
+                                <rect key="frame" x="192" y="462" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.84704906089999998" green="0.061315622039999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <gestureRecognizers/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="Nwk-yE-oux" appends="YES" id="xVR-df-8M6"/>
-                                </connections>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y2X-eh-lwF">
-                                <rect key="frame" x="0.0" y="39" width="414" height="5"/>
+                                <rect key="frame" x="0.0" y="40" width="414" height="5"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QES-PY-lee">
+                                <rect key="frame" x="156" y="539" width="102" height="5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wMu-1l-Rks">
+                                <rect key="frame" x="156" y="130" width="5" height="600"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oYU-lU-kY3">
+                                <rect key="frame" x="253" y="44" width="5" height="500"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sdp-E1-Tl5">
+                                <rect key="frame" x="78" y="130" width="80" height="5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xvr-K4-QPy">
+                                <rect key="frame" x="0.0" y="231" width="80" height="5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YQM-8b-rbV">
+                                <rect key="frame" x="78" y="355" width="80" height="5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Alb-Dm-hkO">
+                                <rect key="frame" x="0.0" y="475" width="80" height="5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="83T-9R-Irz">
+                                <rect key="frame" x="253" y="629" width="5" height="280"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fjl-Nx-tYE">
+                                <rect key="frame" x="258" y="836" width="156" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.84704906089999998" green="0.061315622039999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OXL-lP-GYN">
+                                <rect key="frame" x="136" y="884" width="143" height="4"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="blueButton" destination="jle-9f-U9z" id="NYr-xH-YvW"/>
-                        <outlet property="greenButton" destination="1Dh-Ff-HWf" id="55X-JL-63n"/>
-                        <outlet property="orangeButton" destination="dao-oq-bNX" id="9XR-00-CbR"/>
+                        <outlet property="finishView" destination="Fjl-Nx-tYE" id="nqa-HL-XdA"/>
                         <outlet property="redButton" destination="pjk-0j-hzw" id="yg9-MG-ufI"/>
+                        <outletCollection property="lineCollection1" destination="oYU-lU-kY3" collectionClass="NSMutableArray" id="4FZ-y0-TbB"/>
+                        <outletCollection property="lineCollection1" destination="QES-PY-lee" collectionClass="NSMutableArray" id="cLS-YR-wa7"/>
+                        <outletCollection property="lineCollection1" destination="Y2X-eh-lwF" collectionClass="NSMutableArray" id="7e5-eF-ZHt"/>
+                        <outletCollection property="lineCollection1" destination="wMu-1l-Rks" collectionClass="NSMutableArray" id="T1G-Nn-Rtw"/>
+                        <outletCollection property="lineCollection1" destination="sdp-E1-Tl5" collectionClass="NSMutableArray" id="Obe-v4-feh"/>
+                        <outletCollection property="lineCollection1" destination="xvr-K4-QPy" collectionClass="NSMutableArray" id="Lbj-8A-1fO"/>
+                        <outletCollection property="lineCollection1" destination="YQM-8b-rbV" collectionClass="NSMutableArray" id="Eca-1K-3Lo"/>
+                        <outletCollection property="lineCollection1" destination="Alb-Dm-hkO" collectionClass="NSMutableArray" id="vgT-Zd-8OQ"/>
+                        <outletCollection property="lineCollection1" destination="83T-9R-Irz" collectionClass="NSMutableArray" id="L8A-qp-KPG"/>
+                        <outletCollection property="lineCollection1" destination="OXL-lP-GYN" collectionClass="NSMutableArray" id="1Ly-dc-K3q"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="j0b-dQ-eU4" userLabel="blueButtonTapGesture">
-                    <connections>
-                        <action selector="blueButtonPressed:" destination="BYZ-38-t0r" id="muj-Ks-4IU"/>
-                    </connections>
-                </tapGestureRecognizer>
-                <tapGestureRecognizer id="Nwk-yE-oux">
-                    <connections>
-                        <action selector="redButtonPressed:" destination="BYZ-38-t0r" id="net-bH-JBX"/>
-                    </connections>
-                </tapGestureRecognizer>
-                <tapGestureRecognizer id="mNY-ll-ehf">
-                    <connections>
-                        <action selector="greenButtonPressed:" destination="BYZ-38-t0r" id="e5f-Ba-dUS"/>
-                    </connections>
-                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="125.89285714285714"/>
         </scene>
